--- a/.travis.yml
+++ b/.travis.yml
@@ -1,41 +1,53 @@
 sudo: required
-dist: precise
-language: cpp
+language: generic
+
+cache:
+    apt: true
 
 matrix:
     include:
-        - compiler: gcc
+        - os: linux
+            env: COMPILER=g++-5
             addons:
                 apt:
-                    sources:
-                        - ubuntu-toolchain-r-test
                     packages:
                         - g++-5
-            env: COMPILER=g++-5
-        - compiler: clang
+                sources:
+                    - ubuntu-toolchain-r-test
+                    - llvm-toolchain-precise
+                    - llvm-toolchain-precise-3.8
+                    - llvm-toolchain-precise-3.7
+                    - llvm-toolchain-precise-3.6
+        - os: linux
+            env: COMPILER=clang++-3.6
             addons:
                 apt:
-                    sources:
-                        - ubuntu-toolchain-r-test
-                        - llvm-toolchain-precise-3.7
                     packages:
                         - clang-3.6
-            env: COMPILER=clang++-3.6
-        - compiler: clang
+                        - g++-5
+                    sources: *sources
+        - os: linux
+            env: COMPILER=clang++-3.7
             addons:
                 apt:
-                    sources:
-                        - ubuntu-toolchain-r-test
-                        - llvm-toolchain-precise-3.7
                     packages:
                         - clang-3.7
-            env: COMPILER=clang++-3.7
+                        - g++-5
+                    sources: *sources
+        - os: linux
+            env: COMPILER=clang++-3.8
+            addons:
+                apt:
+                    packages:
+                        - clang-3.8
+                        - g++-5
+                    sources: *sources
 
 before_install:
-    - sudo apt-get update -qq
+  - sudo apt-get update -qq
 
 script:
-    - make clean && make test CXX=$COMPILER build=debug && ./test/bin/alignment && ./test/bin/arithmetic
-    - make clean && make test CXX=$COMPILER build=opt1 && ./test/bin/alignment && ./test/bin/arithmetic
-    - make clean && make test CXX=$COMPILER build=opt2 && ./test/bin/alignment && ./test/bin/arithmetic
-    - make clean && make test CXX=$COMPILER build=opt3 && ./test/bin/alignment && ./test/bin/arithmetic
+  - make clean && make test CXX=$COMPILER build=debug && ./test/bin/alignment && ./test/bin/arithmetic
+  - make clean && make test CXX=$COMPILER build=opt1 && ./test/bin/alignment && ./test/bin/arithmetic
+  - make clean && make test CXX=$COMPILER build=opt2 && ./test/bin/alignment && ./test/bin/arithmetic
+  - make clean && make test CXX=$COMPILER build=opt3 && ./test/bin/alignment && ./test/bin/arithmetic
