--- a/.travis.yml
+++ b/.travis.yml
@@ -1,47 +1,44 @@
 sudo: required
-language: generic
-
-cache:
-  apt: true
+dist: precise
+language: cpp
 
 matrix:
   include:
-    - os: linux
-      env: COMPILER=g++-5
+    - compiler: gcc
       addons:
         apt:
-          packages:
-            - g++-5
           sources:
             - ubuntu-toolchain-r-test
-            - llvm-toolchain-precise
-            - llvm-toolchain-precise-3.8
-            - llvm-toolchain-precise-3.7
-            - llvm-toolchain-precise-3.6
-    - os: linux
-      env: COMPILER=clang++-3.6
+          packages:
+            - g++-5
+      env: COMPILER=g++-5
+    - compiler: clang
       addons:
         apt:
+          sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-precise-3.6
           packages:
             - clang-3.6
-            - g++-5
-          sources: *sources
-    - os: linux
-      env: COMPILER=clang++-3.7
+      env: COMPILER=clang++-3.6
+    - compiler: clang
       addons:
         apt:
+          sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-precise-3.7
           packages:
             - clang-3.7
-            - g++-5
-          sources: *sources
-    - os: linux
-      env: COMPILER=clang++-3.8
+      env: COMPILER=clang++-3.7
+    - compiler: clang
       addons:
         apt:
+          sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-precise-3.8
           packages:
             - clang-3.8
-            - g++-5
-          sources: *sources
+      env: COMPILER=clang++-3.8
 
 before_install:
   - sudo apt-get update -qq
