--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ before_install:
   - sudo apt-get update -qq
 
 script:
-  - make clean && make test CXX=$COMPILER build=debug && ./test/bin/alignment && ./test/bin/arithmetic
-  - make clean && make test CXX=$COMPILER build=opt1 && ./test/bin/alignment && ./test/bin/arithmetic
-  - make clean && make test CXX=$COMPILER build=opt2 && ./test/bin/alignment && ./test/bin/arithmetic
-  - make clean && make test CXX=$COMPILER build=opt3 && ./test/bin/alignment && ./test/bin/arithmetic
+  - make clean && make test CXX=$COMPILER build=debug && ./test/bin/alignment 2> /dev/null && ./test/bin/arithmetic 2> /dev/null
+  - make clean && make test CXX=$COMPILER build=opt1 && ./test/bin/alignment 2> /dev/null && ./test/bin/arithmetic 2> /dev/null
+  - make clean && make test CXX=$COMPILER build=opt2 && ./test/bin/alignment 2> /dev/null && ./test/bin/arithmetic 2> /dev/null
+  - make clean && make test CXX=$COMPILER build=opt3 && ./test/bin/alignment 2> /dev/null && ./test/bin/arithmetic 2> /dev/null
