added io_equality test

--- a/.travis.yml
+++ b/.travis.yml
@@ -63,7 +63,7 @@ install:
   - if [ "$COMPILER_NAME" == "clang++" ]; then sudo ln -sf libc++abi.so.1.0 libc++abi.so.1 && popd && popd && popd; fi
 
 script:
-  - make clean && make test CXX=$COMPILER build=debug && ./build/bin/test/alignment && ./build/bin/test/arithmetic
-  - make clean && make test CXX=$COMPILER build=opt1 && ./build/bin/test/alignment && ./build/bin/test/arithmetic
-  - make clean && make test CXX=$COMPILER build=opt2 && ./build/bin/test/alignment && ./build/bin/test/arithmetic
-  - make clean && make test CXX=$COMPILER build=opt3 && ./build/bin/test/alignment && ./build/bin/test/arithmetic
+  - make clean && make test CXX=$COMPILER build=debug && ./build/bin/test/alignment && ./build/bin/test/arithmetic && ./build/bin/test/io_equality
+  - make clean && make test CXX=$COMPILER build=opt1 && ./build/bin/test/alignment && ./build/bin/test/arithmetic && ./build/bin/test/io_equality
+  - make clean && make test CXX=$COMPILER build=opt2 && ./build/bin/test/alignment && ./build/bin/test/arithmetic && ./build/bin/test/io_equality
+  - make clean && make test CXX=$COMPILER build=opt3 && ./build/bin/test/alignment && ./build/bin/test/arithmetic && ./build/bin/test/io_equality
